# smart-toucan

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  backend_tester.html  docker-compose.yml  package-lock.json  package.json  pyproject.toml  taskchecklist.txt
app/: main.py
app/api/routes/: health_routes.py  reward_routes.py  task_routes.py
app/dependencies/: auth.py
app/logic/: base_manager.py  health_manager.py  pairing_manager.py  reward_manager.py  task_manager.py
app/schemas/: __init__.py  reward.py  task.py
backend/: docker-compose.yml
backend/api/routes/: notification_routes.py  reward_routes.py
backend/app/: main.py
backend/app/core/: db.py
backend/app/dependencies/: auth.py
backend/app/logic/: notification_manager.py  pairing_manager.py  reward_manager.py
backend/app/schemas/: notification.py  pairing.py
backend/logic/: notification_manager.py  task_manager.py
backend/prisma/: schema.prisma
backend/schemas/: __init__.py
frontend/: components.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: client.tsx  routeTree.gen.ts  router.tsx  ssr.tsx
frontend/src/components/: Auth.tsx  ColorTest.tsx  Login.tsx  login-form.tsx
frontend/src/factories/: SimplePageRoute.tsx
frontend/src/hooks/: createAutoMutation.ts
frontend/src/lib/: RealtimeManager.ts  mutations.ts  useMutations.ts  utils.ts
frontend/src/routes/: __root.tsx  _authed.tsx  index.tsx  logout.tsx  signup.tsx
frontend/src/stores/: useSupabaseStore.ts
frontend/src/styles/: app.css
prisma/: schema.prisma
(+9 files in other folders)
