[tool.poetry]
name = "toucan"
version = "0.1.0"
description = "Task and reward management app for couples"
authors = ["Drew Bermudez <drewtbermudez@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
prisma = "^0.11.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
